--- a/gamma/index.html
+++ b/gamma/index.html
@@ -122,7 +122,7 @@
 								<p class="text-justify">
   								In this talk I will present an algebraic approach to smooth manifolds in the language of locally ringed spaces. It turns out that this setting allows us to extend the notion of manifold in various ways. Then, I will focus on presenting definition and basic theory on supermanifolds. The main goal of this talk is to explain the Batchelor-Gawędzki theorem that establishes relation between supermanifolds and vector bundles.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/9tddLK2egGc' target="_blank">Jagna Wiśniewska --- Periodic orbits on non-compact energy hypersurfaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a>
 							</div>
 						</div>
 					</div>
