--- a/gamma/index.html
+++ b/gamma/index.html
@@ -109,6 +109,42 @@
 				<h4 class="teal mb-3 mt-3">Spring 2024</h4>
 				<div class="accordion" id="accordion-spring24">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading37">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse37" aria-expanded="false" aria-controls="collapse37">
+								<h5>TBA
+								<br>
+								TBA &#8213; 23/05/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse37" class="accordion-collapse collapse" aria-labelledby="heading37" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading36">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse36" aria-expanded="false" aria-controls="collapse36">
+								<h5>TBA
+								<br>
+								TBA &#8213; 16/05/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse36" class="accordion-collapse collapse" aria-labelledby="heading36" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading35">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse35" aria-expanded="false" aria-controls="collapse35">
 								<h5>Manifolds and supermanifolds as locally ringed spaces
