--- a/gamma/index.html
+++ b/gamma/index.html
@@ -129,9 +129,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading36">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse36" aria-expanded="false" aria-controls="collapse36">
-								<h5>TBA
+								<h5>Geometry of field theories
 								<br>
-								TBA &#8213; 16/05/2024, 15:00</h5>
+								Silvia Vilariño (University of Zaragoza) &#8213; 16/05/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse36" class="accordion-collapse collapse" aria-labelledby="heading36" data-bs-parent="#accordion-spring24">
