--- a/gamma/index.html
+++ b/gamma/index.html
@@ -138,11 +138,11 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								As it is well known symplectic geometry is the natural arena to develop Classical Mechanics; indeed, a symplectic manifold is locally as a cotangent bundle \(T^*Q\) of a manifold, so that the canonical coordinates \((q^i,p_i)\)can be used as coordinates for the positions \((q^i)\)and the momenta \((p_i)\). The symplectic form is just \(\omega=dq^i\wedge dp_i$, and a simple geometric tool permits to obtain the Hamiltonian vector field \(X_H\)for a Hamiltonian \(H=H(q^i,p_i)\). The integral curves of \(X_H\)are just the solution of Hamilton equations.
+  								As it is well known symplectic geometry is the natural arena to develop Classical Mechanics; indeed, a symplectic manifold is locally as a cotangent bundle \(T^*Q\) of a manifold, so that the canonical coordinates \((q^i,p_i)\) can be used as coordinates for the positions \((q^i)\) and the momenta \((p_i)\). The symplectic form is just \(\omega=dq^i\wedge dp_i$, and a simple geometric tool permits to obtain the Hamiltonian vector field \(X_H\) for a Hamiltonian \(H=H(q^i,p_i)\). The integral curves of \(X_H\) are just the solution of Hamilton equations.
 								</p>
 
 								<p class="text-justify">
-								In Classical Field Theory, the Hamiltonian function is of the form \(H=H(x^\alpha, q^i, p^\alpha_i)\)where \((x^1, \ldots, x^k)\in \mathbb{R}^k,\, q^i\)represent the components of the fields and \(p^\alpha_i\)are the conjugate momenta.
+								In Classical Field Theory, the Hamiltonian function is of the form \(H=H(x^\alpha, q^i, p^\alpha_i)\) where \((x^1, \ldots, x^k)\in \mathbb{R}^k,\, q^i\) represent the components of the fields and \(p^\alpha_i\) are the conjugate momenta.
 								</p>
 
 								<p class="text-justify">
@@ -150,7 +150,7 @@
 								</p>
 
 								<p class="text-justify">
-								The aim of this talk is to review some of these geometric framework for describing classical field theories. In particular we consider \(k$-symplectic geometry, \(k$-cosymplectic geometry and multisymplectic geometry. Finally we analyze the relationships between them.
+								The aim of this talk is to review some of these geometric framework for describing classical field theories. In particular we consider \(k\)-symplectic geometry, \(k\)-cosymplectic geometry and multisymplectic geometry. Finally we analyze the relationships between them.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
