--- a/gamma/index.html
+++ b/gamma/index.html
@@ -156,7 +156,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								As it is well known symplectic geometry is the natural arena to develop Classical Mechanics; indeed, a symplectic manifold is locally as a cotangent bundle \(T^*Q\) of a manifold, so that the canonical coordinates \((q^i,p_i)\) can be used as coordinates for the positions \((q^i)\) and the momenta \((p_i)\). The symplectic form is just \(\omega=dq^i\wedge dp_i$, and a simple geometric tool permits to obtain the Hamiltonian vector field \(X_H\) for a Hamiltonian \(H=H(q^i,p_i)\). The integral curves of \(X_H\) are just the solution of Hamilton equations.
+  								As it is well known symplectic geometry is the natural arena to develop Classical Mechanics; indeed, a symplectic manifold is locally as a cotangent bundle \(T^*Q\) of a manifold, so that the canonical coordinates \((q^i,p_i)\) can be used as coordinates for the positions \((q^i)\) and the momenta \((p_i)\). The symplectic form is just \(\omega=dq^i\wedge dp_i\), and a simple geometric tool permits to obtain the Hamiltonian vector field \(X_H\) for a Hamiltonian \(H=H(q^i,p_i)\). The integral curves of \(X_H\) are just the solution of Hamilton equations.
 								</p>
 
 								<p class="text-justify">
