--- a/gamma/index.html
+++ b/gamma/index.html
@@ -147,7 +147,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading36">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse36" aria-expanded="false" aria-controls="collapse36">
-								<h5>Geometry of field theories
+								<h5>Geometry and classical field theories
 								<br>
 								Silvia Vilariño (University of Zaragoza) &#8213; 16/05/2024, 15:00</h5>
 							</button>
