--- a/gamma/index.html
+++ b/gamma/index.html
@@ -65,6 +65,14 @@
 
 				<div class="col-12">
 					<p class='lead text-justify'>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
+					<h5>Topics:</h5>
+					<ul class='ms-4 lead'>
+						<li>Geometric mechanics and field theories</li>
+						<li>Geometric structures: symplectic and Poisson geometry, contact geometry and its Generalisations</li>
+						<li>Supergeometry</li>
+						<li>Integrable systems, superposition rules, Lie systems</li>
+						<li>Stochasticity and numerical methods</li>
+					</ul>
 					<p class='lead'><strong>e-mail:</strong> gamma.seminar(at)gmail.com</p>
 				</div>
 			</div>
