--- a/gamma/index.html
+++ b/gamma/index.html
@@ -8,11 +8,11 @@
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   
-		<link rel="stylesheet" type="text/css" href="./../css/style.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
 
 		<title>Gamma Seminar</title>
 
-		<link rel="icon" type="image/x-icon" href="../img/Gamma.png">
+		<link rel="icon" type="image/x-icon" href="./img/Gamma.png">
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RG1PTVSHCG"></script>
@@ -46,7 +46,7 @@
 			<div class="row">
 				<!-- <div class="col-7">
 					
-					<img src="./../img/logo2.png" class="img-thumbnail border-0 mt-2" alt="gamma">
+					<img src="./img/logo2.png" class="img-thumbnail border-0 mt-2" alt="gamma">
 
 				</div> -->
 
@@ -59,7 +59,7 @@
 				</div> -->
 
 				<div class="col-7">
-					<img src="./../img/logo2.png" class="img-thumbnail border-0 mt-2 mb-4" alt="gamma">
+					<img src="./img/logo2.png" class="img-thumbnail border-0 mt-2 mb-4" alt="gamma">
 				</div>
 
 
