--- a/gamma/index.html
+++ b/gamma/index.html
@@ -812,6 +812,23 @@
 				</div>
 			</div>
 
+			<!-- <h3>Financial support</h3> -->
+			<div class="container mt-5">
+				<div class="row align-items-center">
+					<div class="col-2">
+						<img src="img/fuw-logo.jpg" class="img-fluid" alt="...">
+					</div>
+					<div class="col-1"></div>
+					<div class="col-3">
+						<img src="img/uw-logo-pl.png" class="img-fluid" alt="...">
+					</div>
+					<div class="col-1"></div>
+					<div class="col-5">
+						<img src="img/unir.png" class="img-fluid" alt="...">
+					</div>
+				</div>
+			</div>
+
 
 		</div>
 
