--- a/gamma/index.html
+++ b/gamma/index.html
@@ -137,9 +137,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading37">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse37" aria-expanded="false" aria-controls="collapse37">
-								<h5>TBA
+								<h5>Geometry of \(k\)-contact manifolds
 								<br>
-								TBA &#8213; 06/06/2024, 15:00</h5>
+								Javier de Lucas (University of Warsaw) &#8213; 06/06/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse37" class="accordion-collapse collapse" aria-labelledby="heading37" data-bs-parent="#accordion-spring24">
