--- a/gamma/index.html
+++ b/gamma/index.html
@@ -114,8 +114,84 @@
 
 				<h3 class="teal">&#9632; Conferences</h3>
 				
+				<h4 class="teal mb-3 mt-3">Fall 2024</h4>
+				<div class="accordion" id="accordion-fall24">
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading42">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse42" aria-expanded="false" aria-controls="collapse42">
+								<h5>TBA
+								<br>
+								TBA &#8213; 03/10/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse42" class="accordion-collapse collapse" aria-labelledby="heading42" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+				</div>
+				
 				<h4 class="teal mb-3 mt-3">Spring 2024</h4>
 				<div class="accordion" id="accordion-spring24">
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading41">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse41" aria-expanded="false" aria-controls="collapse41">
+								<h5>\(k\)-contact Lie systems
+								<br>
+								Tomasz Sobczak &#8213; 04/07/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse41" class="accordion-collapse collapse" aria-labelledby="heading41" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading40">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse40" aria-expanded="false" aria-controls="collapse40">
+								<h5>TBA
+								<br>
+								Rubén Izquierdo &#8213; 27/06/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse40" class="accordion-collapse collapse" aria-labelledby="heading40" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading39">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse39" aria-expanded="false" aria-controls="collapse39">
+								<h5>TBA
+								<br>
+								TBA &#8213; 20/06/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse39" class="accordion-collapse collapse" aria-labelledby="heading39" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading38">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse38" aria-expanded="false" aria-controls="collapse38">
@@ -178,7 +254,7 @@
 								<p class="text-justify">
 								The aim of this talk is to review some of these geometric framework for describing classical field theories. In particular we consider \(k\)-symplectic geometry, \(k\)-cosymplectic geometry and multisymplectic geometry. Finally we analyze the relationships between them.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/Kdm-_gLxjBs' target="_blank">Silvia Vilariño --- Geometry and classical field theories</a>
 							</div>
 						</div>
 					</div>
