--- a/gamma/index.html
+++ b/gamma/index.html
@@ -159,7 +159,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading40">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse40" aria-expanded="false" aria-controls="collapse40">
-								<h5>TBA
+								<h5>Coisotropic reduction in Multisymplectic Geometry
 								<br>
 								Rubén Izquierdo &#8213; 26/06/2024, 15:00</h5>
 							</button>
@@ -168,7 +168,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								In this talk I will present some recent work with Manuel de León on Multisymplectic Geometry. More particularly, we will study a generalization to Multisymplectic manifolds of some basic results in Symplectic Geometry: An interpretation of (locally) Hamiltonian multivector fields as k-Lagrangian submanifolds and coisotropic reduction when the multisymplectic manifold is a bundle of forms.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
