--- a/gamma/index.html
+++ b/gamma/index.html
@@ -117,11 +117,29 @@
 				<h4 class="teal mb-3 mt-3">Fall 2024</h4>
 				<div class="accordion" id="accordion-fall24">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading43">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse43" aria-expanded="false" aria-controls="collapse43">
+								<h5>TBA
+								<br>
+								TBA &#8213; 03/10/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse43" class="accordion-collapse collapse" aria-labelledby="heading43" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading42">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse42" aria-expanded="false" aria-controls="collapse42">
 								<h5>TBA
 								<br>
-								TBA &#8213; 03/10/2024, 15:00</h5>
+								Iván Gutiérrez-Sagredo &#8213; 26/09/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse42" class="accordion-collapse collapse" aria-labelledby="heading42" data-bs-parent="#accordion-fall24">
@@ -213,7 +231,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading37">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse37" aria-expanded="false" aria-controls="collapse37">
-								<h5>Geometry of \(k\)-contact manifolds
+								<h5>Unveiling a novel distributional method for exploring \(k\)-contact manifolds
 								<br>
 								Javier de Lucas (University of Warsaw) &#8213; 06/06/2024, 15:00</h5>
 							</button>
@@ -222,7 +240,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								Delving into the realm of field theories, \(k\)-contact manifolds represent a sophisticated extension of contact manifolds, akin to how partial differential equations expand upon ordinary differential equations. While contact manifolds are traditionally analysed through contact distributions with the contact form serving as a mere tool for practicality, the same cannot be said for their \(k\)-contact counterparts. This talk introduces a cutting-edge distributional approach tailored specifically for \(k\)-contact manifolds. However, numerous properties inherent to contact manifolds do not seamlessly translate to the \(k\)-contact domain. Nevertheless, we will unveil innovative concepts and findings that open a new way to study \(k\)-contact manifolds.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
