--- a/gamma/index.html
+++ b/gamma/index.html
@@ -213,16 +213,16 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading38">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse38" aria-expanded="false" aria-controls="collapse38">
-								<h5>TBA
+								<h5>Unveiling a novel distributional method for exploring \(k\)-contact manifolds (II)
 								<br>
-								TBA &#8213; 11/06/2024, 15:00</h5>
+								Javier de Lucas (University of Warsaw) &#8213; 11/06/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse38" class="accordion-collapse collapse" aria-labelledby="heading38" data-bs-parent="#accordion-spring24">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								Delving into the realm of field theories, \(k\)-contact manifolds represent a sophisticated extension of contact manifolds, akin to how partial differential equations expand upon ordinary differential equations. While contact manifolds are traditionally analysed through contact distributions with the contact form serving as a mere tool for practicality, the same cannot be said for their \(k\)-contact counterparts. This talk introduces a cutting-edge distributional approach tailored specifically for \(k\)-contact manifolds. However, numerous properties inherent to contact manifolds do not seamlessly translate to the \(k\)-contact domain. Nevertheless, we will unveil innovative concepts and findings that open a new way to study \(k\)-contact manifolds.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
@@ -231,7 +231,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading37">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse37" aria-expanded="false" aria-controls="collapse37">
-								<h5>Unveiling a novel distributional method for exploring \(k\)-contact manifolds
+								<h5>Unveiling a novel distributional method for exploring \(k\)-contact manifolds (I)
 								<br>
 								Javier de Lucas (University of Warsaw) &#8213; 06/06/2024, 15:00</h5>
 							</button>
@@ -242,7 +242,7 @@
 								<p class="text-justify">
   								Delving into the realm of field theories, \(k\)-contact manifolds represent a sophisticated extension of contact manifolds, akin to how partial differential equations expand upon ordinary differential equations. While contact manifolds are traditionally analysed through contact distributions with the contact form serving as a mere tool for practicality, the same cannot be said for their \(k\)-contact counterparts. This talk introduces a cutting-edge distributional approach tailored specifically for \(k\)-contact manifolds. However, numerous properties inherent to contact manifolds do not seamlessly translate to the \(k\)-contact domain. Nevertheless, we will unveil innovative concepts and findings that open a new way to study \(k\)-contact manifolds.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/COZfkolA4lY' target="_blank">Javier de Lucas --- Unveiling a novel distributional method for exploring \(k\)-contact manifolds</a>
 							</div>
 						</div>
 					</div>
