--- a/gamma/index.html
+++ b/gamma/index.html
@@ -242,7 +242,7 @@
 								<p class="text-justify">
   								Delving into the realm of field theories, \(k\)-contact manifolds represent a sophisticated extension of contact manifolds, akin to how partial differential equations expand upon ordinary differential equations. While contact manifolds are traditionally analysed through contact distributions with the contact form serving as a mere tool for practicality, the same cannot be said for their \(k\)-contact counterparts. This talk introduces a cutting-edge distributional approach tailored specifically for \(k\)-contact manifolds. However, numerous properties inherent to contact manifolds do not seamlessly translate to the \(k\)-contact domain. Nevertheless, we will unveil innovative concepts and findings that open a new way to study \(k\)-contact manifolds.
 								</p>
-								<strong>Link to the video: </strong><a href='https://youtu.be/COZfkolA4lY' target="_blank">Javier de Lucas --- Unveiling a novel distributional method for exploring \(k\)-contact manifolds</a>
+								<strong>Link to the video: </strong><a href='https://youtu.be/COZfkolA4lY' target="_blank">Javier de Lucas --- Unveiling a novel distributional method for exploring \(k\)-contact manifolds (I)</a>
 							</div>
 						</div>
 					</div>
