--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 					<li class='mb-2'>J. de Lucas, X. Rivas and M. Zając, "Hamiltonian stochastic Lie systems and applications". <em>Preprint.</em> <a href="https://arxiv.org/abs/2307.06232" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2307.06232</span></a></li>
 
-					<li class='mb-2'>X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Preprint.</em> <a href="https://arxiv.org/abs/2306.08556" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2306.08556</span></a></li>
+					<li class='mb-2'>X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Rev. Real Acad. Cienc. Exactas Fis. Nat. - A: Mat. (to appear)</em> <a href="https://arxiv.org/abs/2306.08556" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2306.08556</span></a></li>
 
 					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Rev. Math. Phys.</em>, 2024. <a href="https://arxiv.org/abs/2304.00833" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2304.00833</span></a> <a href="https://doi.org/10.1142/S0129055X24500193" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1142/S0129055X24500193</span></a></li>
 
@@ -95,7 +95,7 @@
 
 					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Fortschr. Phys.</em> <strong>71</strong>(8-9):2300048, 2023. <a href="https://arxiv.org/abs/2212.14848" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2212.14848</span></a> <a href="https://doi.org/10.1002/prop.202300048" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1002/prop.202300048</span></a></li>
 
-					<li class='mb-2'>J. Gaset, M. Lainz, A. Mas and X. Rivas, "The Herglotz variational principle for dissipative field theories". <em>Geom. Mech.</em> (to appear) <a href="https://arxiv.org/abs/2211.17058" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2211.17058</span></a></li>
+					<li class='mb-2'>J. Gaset, M. Lainz, A. Mas and X. Rivas, "The Herglotz variational principle for dissipative field theories". <em>Geom. Mech.</em> <a href="https://arxiv.org/abs/2211.17058" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2211.17058</span></a> <a href="https://doi.org/10.1142/S2972458924500060" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1142/S2972458924500060</span></a></li>
 
 					<li class='mb-2'>X. Rivas, "Nonautonomous <em>k</em>-contact field theories". <em>J. Math. Phys.</em> <strong>64</strong>(3):033507, 2023. <a href="https://arxiv.org/abs/2210.09166" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2210.09166</span></a> <a href="https://doi.org/10.1063/5.0131110" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1063/5.0131110</span></a></li>
 
