--- a/papers/index.html
+++ b/papers/index.html
@@ -40,7 +40,7 @@
 
 					<li class='mb-2'><a href="./.pdf" target="_blank"><strong>(PDF)</strong></a> X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2306.08556" target="_blank">2306.08556</a></li>
 
-					<li class='mb-2'><a href="./.pdf" target="_blank"><strong>(PDF)</strong></a> X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
+					<li class='mb-2'><a href="./16_RMP_Some contributions.pdf" target="_blank"><strong>(PDF)</strong></a> X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
 
 					<li class='mb-2'><a href="./14_LRVZ_Reduction polyco.pdf" target="_blank"><strong>(PDF)</strong></a> J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "On <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reductions". <em>J. Geom. Phys.</em> <strong>191</strong>:104899, 2023. arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2023.104899" target="_blank">10.1016/j.geomphys.2023.104899</a></li>
 
