--- a/gamma/index.html
+++ b/gamma/index.html
@@ -139,7 +139,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse41" aria-expanded="false" aria-controls="collapse41">
 								<h5>TBA
 								<br>
-								Iván Gutiérrez-Sagredo &#8213; 26/09/2024, 15:00</h5>
+								Iván Gutiérrez-Sagredo (University of Burgos) &#8213; 26/09/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse41" class="accordion-collapse collapse" aria-labelledby="heading41" data-bs-parent="#accordion-fall24">
@@ -161,7 +161,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse40" aria-expanded="false" aria-controls="collapse40">
 								<h5>\(k\)-contact Lie systems
 								<br>
-								Tomasz Sobczak &#8213; 04/07/2024, 15:00</h5>
+								Tomasz Sobczak (University of Warsaw) &#8213; 04/07/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse40" class="accordion-collapse collapse" aria-labelledby="heading40" data-bs-parent="#accordion-spring24">
@@ -179,7 +179,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse39" aria-expanded="false" aria-controls="collapse39">
 								<h5>Coisotropic reduction in Multisymplectic Geometry
 								<br>
-								Rubén Izquierdo &#8213; 26/06/2024, 15:00</h5>
+								Rubén Izquierdo (ICMAT) &#8213; 26/06/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse39" class="accordion-collapse collapse" aria-labelledby="heading39" data-bs-parent="#accordion-spring24">
@@ -197,14 +197,14 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse38" aria-expanded="false" aria-controls="collapse38">
 								<h5>Jacobi Fields and Jacobi sections for sprays on Lie algebroids
 								<br>
-								Misael Avendaño Camacho &#8213; 18/06/2024, 15:00</h5>
+								Misael Avendaño Camacho (University of Sonora) &#8213; 18/06/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse38" class="accordion-collapse collapse" aria-labelledby="heading38" data-bs-parent="#accordion-spring24">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								Abstract: In Riemannian geometry, a Jacobi field is a vector field along a geodesic curve arising as the variation field of any one parameter family of geodesics. Since the geodesic curves turned out related to a vector field on the tangent bundle called geodesic spray, the Jacobi fields have several generalizations that allow these fields to play important roles in many areas of differential geometry including Finsler geometry, Lagrangian mechanics, and Lie algebroids. On Lie algebroids, M. Boucetta and later  J. Cariñena, E. Martinez, and I. M. Gheorghiu introduced the notion of Jacobi sections generalizing the usual concept from the tangent algebroid. In an ongoing investigation with the Ph. D. Student Jhonny Kama-Mamani, we propose the notion of Jacobi field for sprays on Lie algebroids trying to generalize some properties of the classical Jacobi fields on Riemannian Geometry. In this talk, we present the notion of Jacobi fields and Jacobi sections on Lie algebroids and discuss the relation between these notions which are originated by the same common object. We also present some perspectives on applications of Jacobi fields on Lie algebroids.
+  								In Riemannian geometry, a Jacobi field is a vector field along a geodesic curve arising as the variation field of any one parameter family of geodesics. Since the geodesic curves turned out related to a vector field on the tangent bundle called geodesic spray, the Jacobi fields have several generalizations that allow these fields to play important roles in many areas of differential geometry including Finsler geometry, Lagrangian mechanics, and Lie algebroids. On Lie algebroids, M. Boucetta and later  J. Cariñena, E. Martinez, and I. M. Gheorghiu introduced the notion of Jacobi sections generalizing the usual concept from the tangent algebroid. In an ongoing investigation with the Ph. D. Student Jhonny Kama-Mamani, we propose the notion of Jacobi field for sprays on Lie algebroids trying to generalize some properties of the classical Jacobi fields on Riemannian Geometry. In this talk, we present the notion of Jacobi fields and Jacobi sections on Lie algebroids and discuss the relation between these notions which are originated by the same common object. We also present some perspectives on applications of Jacobi fields on Lie algebroids.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
