--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 					<li>Miguel C. Muñoz-Lecanda</li>
 					<li><a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a></li>
 					<li><a href="http://xtsunxet.usc.es/modesto/" target="_blank">Modesto Salgado</a></li>
+					<li>Tomasz Sobczak</li>
 					<li>Silvia Souto</li>
 					<li>Daniel Torres</li>
 					<li><a href="http://cud.unizar.es/svilariño" target="_blank">Silvia Vilariño</a></li>
