--- a/gamma/index.html
+++ b/gamma/index.html
@@ -206,7 +206,7 @@
 								<p class="text-justify">
   								In Riemannian geometry, a Jacobi field is a vector field along a geodesic curve arising as the variation field of any one parameter family of geodesics. Since the geodesic curves turned out related to a vector field on the tangent bundle called geodesic spray, the Jacobi fields have several generalizations that allow these fields to play important roles in many areas of differential geometry including Finsler geometry, Lagrangian mechanics, and Lie algebroids. On Lie algebroids, M. Boucetta and later  J. Cariñena, E. Martinez, and I. M. Gheorghiu introduced the notion of Jacobi sections generalizing the usual concept from the tangent algebroid. In an ongoing investigation with the Ph. D. Student Jhonny Kama-Mamani, we propose the notion of Jacobi field for sprays on Lie algebroids trying to generalize some properties of the classical Jacobi fields on Riemannian Geometry. In this talk, we present the notion of Jacobi fields and Jacobi sections on Lie algebroids and discuss the relation between these notions which are originated by the same common object. We also present some perspectives on applications of Jacobi fields on Lie algebroids.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/P3YwjTt3zMY' target="_blank">Misael Avendaño Camacho --- Jacobi Fields and Jacobi sections for sprays on Lie algebroids</a>
 							</div>
 						</div>
 					</div>
