--- a/papers/index.html
+++ b/papers/index.html
@@ -38,7 +38,7 @@
 
 					<li class='mb-2'><a href="./.pdf" target="_blank"><strong>(PDF)</strong></a> J. de Lucas, X. Rivas and M. Zając, "Hamiltonian stochastic Lie systems and applications". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2307.06232" target="_blank">2307.06232</a></li>
 
-					<li class='mb-2'><a href="./.pdf" target="_blank"><strong>(PDF)</strong></a> X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2306.08556" target="_blank">2306.08556</a></li>
+					<li class='mb-2'><a href="./17_RACSAM_Darboux.pdf" target="_blank"><strong>(PDF)</strong></a> X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2306.08556" target="_blank">2306.08556</a></li>
 
 					<li class='mb-2'><a href="./16_RMP_Some contributions.pdf" target="_blank"><strong>(PDF)</strong></a> X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
 
