--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 					<li class='mb-2'>J. de Lucas, X. Rivas and M. Zając, "Hamiltonian stochastic Lie systems and applications". <em>Preprint.</em> <a href="https://arxiv.org/abs/2307.06232" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2307.06232</span></a></li>
 
-					<li class='mb-2'>X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Rev. Real Acad. Cienc. Exactas Fis. Nat. - A: Mat. (to appear)</em> <a href="https://arxiv.org/abs/2306.08556" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2306.08556</span></a></li>
+					<li class='mb-2'>X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Rev. Real Acad. Cienc. Exactas Fis. Nat. - A: Mat.</em> <strong>181</strong>:131 <a href="https://arxiv.org/abs/2306.08556" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2306.08556</span></a> <a href="https://doi.org/10.1007/s13398-024-01632-w" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1007/s13398-024-01632-w</span></a></li>
 
 					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Rev. Math. Phys.</em>, 2024. <a href="https://arxiv.org/abs/2304.00833" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2304.00833</span></a> <a href="https://doi.org/10.1142/S0129055X24500193" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1142/S0129055X24500193</span></a></li>
 
