--- a/gamma/index.html
+++ b/gamma/index.html
@@ -86,7 +86,7 @@
 				<h5>Organizing committee:</h5>
 				<ul class="ms-4">
 					<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a> (University of Warsaw)</li>
-					<li><a href="https://xrivas.com/" target="_blank">Xavier Rivas</a> (International University of La Rioja)</li>
+					<li><a href="https://xrivas.com/" target="_blank">Xavier Rivas</a> (Universitat Rovira i Virgili)</li>
 				</ul>
 				<!-- <h5>Participants:</h5>
 				<ul class="ms-4">
