--- a/gamma/index.html
+++ b/gamma/index.html
@@ -188,7 +188,7 @@
 								<p class="text-justify">
   								In this talk I will present some recent work with Manuel de León on Multisymplectic Geometry. More particularly, we will study a generalization to Multisymplectic manifolds of some basic results in Symplectic Geometry: An interpretation of (locally) Hamiltonian multivector fields as k-Lagrangian submanifolds and coisotropic reduction when the multisymplectic manifold is a bundle of forms.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/2sWAcn1k3V0' target="_blank">Rubén Izquierdo --- Coisotropic reduction in Multisymplectic Geometry</a>
 							</div>
 						</div>
 					</div>
