--- a/gamma/index.html
+++ b/gamma/index.html
@@ -168,7 +168,9 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								It is well known that Lie systems are systems of ordinary differential equations whose general solutions can be described as a function, the superposition rule, of a family of particular solutions and some constants. Importantly, every Lie system is associated with a finite-dimensional Lie algebra of vector fields. Studying these algebras leads to the investigation of foliations, Lie group actions, generalized distributions, and other geometrical issues.
+
+								In my talk, I will consider the aforementioned vector fields as \(\boldsymbol\eta\)-Hamiltonian vector fields relative to the \(k\)-contact structure. \(k\)-Contact geometry is an extension of the standard contact geometry, and its properties can differ significantly. This approach allows for the analysis of a wider range of Lie systems, which I will demonstrate with some specific examples.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
