--- a/gamma/index.html
+++ b/gamma/index.html
@@ -172,7 +172,7 @@
 
 								In my talk, I will consider the aforementioned vector fields as \(\boldsymbol\eta\)-Hamiltonian vector fields relative to the \(k\)-contact structure. \(k\)-Contact geometry is an extension of the standard contact geometry, and its properties can differ significantly. This approach allows for the analysis of a wider range of Lie systems, which I will demonstrate with some specific examples.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/GAtIgoF9tb4' target="_blank">Tomas Sobczak --- \(k\)-contact Lie systems</a>
 							</div>
 						</div>
 					</div>
