--- a/gamma/index.html
+++ b/gamma/index.html
@@ -117,6 +117,99 @@
 				<h4 class="teal mb-3 mt-3">Fall 2024</h4>
 				<div class="accordion" id="accordion-fall24">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading47">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse47" aria-expanded="false" aria-controls="collapse47">
+								<h5>Reduction of (multi)-symplectic observables
+								<br>
+								Leonid Ryvkin (University Claude Bernard Lyon 1) &#8213; 07/11/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse47" class="accordion-collapse collapse" aria-labelledby="heading47" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								We develop a reduction scheme for the Lie-infinity-algebra of observables on a pre-multisymplectic manifold \((M,\omega)\) in the presence of a compatible Lie algebra action \(\mathfrak{g}\curvearrowright M\) and subset \(N\subset M\). This reduction relates to the geometric multisymplectic reduction recently proposed by Casey Blacker. In particular, when \(M\) is a symplectic manifold and \(N\) the level set of a momentum our approach generalizes Marsden-Weinstein reduction, and has interesting relations to further symplectic reduction schemes.
+  								<br>
+  								
+								Based on joint work with Casey Blacker and Antonio Miti.
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading46">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse46" aria-expanded="false" aria-controls="collapse46">
+								<h5>TBA
+								<br>
+								TBA &#8213; 31/10/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse46" class="accordion-collapse collapse" aria-labelledby="heading46" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading45">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse45" aria-expanded="false" aria-controls="collapse45">
+								<h5>TBA
+								<br>
+								TBA &#8213; 24/10/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse45" class="accordion-collapse collapse" aria-labelledby="heading45" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading44">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse44" aria-expanded="false" aria-controls="collapse44">
+								<h5>TBA
+								<br>
+								TBA &#8213; 17/10/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse44" class="accordion-collapse collapse" aria-labelledby="heading44" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading43">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse43" aria-expanded="false" aria-controls="collapse43">
+								<h5>TBA
+								<br>
+								TBA &#8213; 10/10/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse43" class="accordion-collapse collapse" aria-labelledby="heading43" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading42">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse42" aria-expanded="false" aria-controls="collapse42">
 								<h5>TBA
