--- a/gamma/index.html
+++ b/gamma/index.html
@@ -196,7 +196,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse43" aria-expanded="false" aria-controls="collapse43">
 								<h5>TBA
 								<br>
-								TBA &#8213; 10/10/2024, 15:00</h5>
+								Eduardo García-Toraño (Universidad Nacional del Sur) &#8213; 10/10/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse43" class="accordion-collapse collapse" aria-labelledby="heading43" data-bs-parent="#accordion-fall24">
