--- a/gamma/index.html
+++ b/gamma/index.html
@@ -64,7 +64,7 @@
 
 
 				<div class="col-12">
-					<p class='lead text-justify'>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
+					<p class='lead text-justify'>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the Universitat Rovira i Virgili, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
 					<h5>Topics:</h5>
 					<ul class='ms-4 lead'>
 						<li>Geometric mechanics and field theories</li>
@@ -160,7 +160,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse45" aria-expanded="false" aria-controls="collapse45">
 								<h5>TBA
 								<br>
-								TBA &#8213; 24/10/2024, 15:00</h5>
+								Jorge A. Jover Galtier (Universidad de Zaragoza) &#8213; 24/10/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse45" class="accordion-collapse collapse" aria-labelledby="heading45" data-bs-parent="#accordion-fall24">
@@ -994,8 +994,8 @@
 						<img src="img/uw-logo-pl.png" class="img-fluid" alt="...">
 					</div>
 					<div class="col-1"></div>
-					<div class="col-5">
-						<img src="img/unir.png" class="img-fluid" alt="...">
+					<div class="col-4">
+						<img src="img/logo-urv.png" class="img-fluid" alt="...">
 					</div>
 				</div>
 			</div>
