--- a/gamma/index.html
+++ b/gamma/index.html
@@ -117,6 +117,96 @@
 				<h4 class="teal mb-3 mt-3">Fall 2024</h4>
 				<div class="accordion" id="accordion-fall24">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading52">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse52" aria-expanded="false" aria-controls="collapse52">
+								<h5>TBA
+								<br>
+								TBA &#8213; 05/12/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse52" class="accordion-collapse collapse" aria-labelledby="heading52" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading51">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse51" aria-expanded="false" aria-controls="collapse51">
+								<h5>TBA
+								<br>
+								TBA &#8213; 28/11/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse51" class="accordion-collapse collapse" aria-labelledby="heading51" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading50">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse50" aria-expanded="false" aria-controls="collapse50">
+								<h5>TBA
+								<br>
+								TBA &#8213; 21/11/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse50" class="accordion-collapse collapse" aria-labelledby="heading50" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading49">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse49" aria-expanded="false" aria-controls="collapse49">
+								<h5>TBA
+								<br>
+								TBA &#8213; 14/11/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse49" class="accordion-collapse collapse" aria-labelledby="heading49" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading48">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse48" aria-expanded="false" aria-controls="collapse48">
+								<h5>TBA
+								<br>
+								TBA &#8213; 07/11/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse48" class="accordion-collapse collapse" aria-labelledby="heading48" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading47">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse47" aria-expanded="false" aria-controls="collapse47">
 								<h5>Reduction of (multi)-symplectic observables
