--- a/gamma/index.html
+++ b/gamma/index.html
@@ -64,7 +64,7 @@
 
 
 				<div class="col-12">
-					<p class='lead text-justify'>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the Universitat Rovira i Virgili, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
+					<p class='lead text-justify'>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the Universitat Rovira i Virgili and the Polytechnic University of Catalonia.</p>
 					<h5>Topics:</h5>
 					<ul class='ms-4 lead'>
 						<li>Geometric mechanics and field theories</li>
