--- a/gamma/index.html
+++ b/gamma/index.html
@@ -193,7 +193,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse48" aria-expanded="false" aria-controls="collapse48">
 								<h5>TBA
 								<br>
-								TBA &#8213; 14/11/2024, 15:00</h5>
+								Ana Bălibanu (Louisiana State University) &#8213; 14/11/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse48" class="accordion-collapse collapse" aria-labelledby="heading48" data-bs-parent="#accordion-fall24">
