--- a/gamma/index.html
+++ b/gamma/index.html
@@ -139,7 +139,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse51" aria-expanded="false" aria-controls="collapse51">
 								<h5>TBA
 								<br>
-								TBA &#8213; 05/12/2024, 15:00</h5>
+								Leyli Mammadova (University of Edinburgh) &#8213; 05/12/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse51" class="accordion-collapse collapse" aria-labelledby="heading51" data-bs-parent="#accordion-fall24">
