--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<div class="col-9">
 					
 					<h1 class="h1 blue name">Xavier Rivas</h1>
-					<p class='lead'>Escuela Superior en Ingeniería y Tecnología, Universidad Internacional de La Rioja</p>
+					<p class='lead'>Departament d'Enginyeria Informàtica i Matemàtiques, Universitat Rovira i Virgili, Tarragona</p>
 					<dl class="row">
 						<!-- <dt class="col-sm-2">Postal adress</dt>
 						<dd class="col-sm-10">Campus Nord, edifici C3, despatx 102.<br> C. Jordi Girona, 1. 08034 Barcelona, Catalunya.</dd> -->
