--- a/gamma/index.html
+++ b/gamma/index.html
@@ -304,7 +304,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse42" aria-expanded="false" aria-controls="collapse42">
 								<h5>TBA
 								<br>
-								TBA &#8213; 03/10/2024, 15:00</h5>
+								Manuel de León (ICMAT) &#8213; 03/10/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse42" class="accordion-collapse collapse" aria-labelledby="heading42" data-bs-parent="#accordion-fall24">
