--- a/gamma/index.html
+++ b/gamma/index.html
@@ -114,8 +114,84 @@
 
 				<h3 class="teal">&#9632; Conferences</h3>
 				
+				<h4 class="teal mb-3 mt-3">Spring 2025</h4>
+				<div class="accordion" id="accordion-spring25">
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading56">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse56" aria-expanded="false" aria-controls="collapse56">
+								<h5>TBA
+								<br>
+								TBA &#8213; 25/01/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse56" class="accordion-collapse collapse" aria-labelledby="heading56" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading55">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse55" aria-expanded="false" aria-controls="collapse55">
+								<h5>TBA
+								<br>
+								TBA &#8213; 18/01/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse55" class="accordion-collapse collapse" aria-labelledby="heading55" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading54">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse54" aria-expanded="false" aria-controls="collapse54">
+								<h5>TBA
+								<br>
+								TBA &#8213; 11/01/2025, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse54" class="accordion-collapse collapse" aria-labelledby="heading54" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
+				</div>
+				
 				<h4 class="teal mb-3 mt-3">Fall 2024</h4>
 				<div class="accordion" id="accordion-fall24">
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading53">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse53" aria-expanded="false" aria-controls="collapse53">
+								<h5>TBA
+								<br>
+								TBA &#8213; 12/12/2024, 15:00</h5>
+							</button>
+						</h3>
+						<div id="collapse53" class="accordion-collapse collapse" aria-labelledby="heading53" data-bs-parent="#accordion-fall24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+							</div>
+						</div>
+					</div>
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading52">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse52" aria-expanded="false" aria-controls="collapse52">
@@ -268,7 +344,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse44" aria-expanded="false" aria-controls="collapse44">
 								<h5>TBA
 								<br>
-								TBA &#8213; 17/10/2024, 15:00</h5>
+								Daniel Felipe López García (Instituto de Matemática e Estatística, Universidad de São Paulo) &#8213; 17/10/2024, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse44" class="accordion-collapse collapse" aria-labelledby="heading44" data-bs-parent="#accordion-fall24">
