--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<!-- <dt class="col-sm-2">Postal adress</dt>
 						<dd class="col-sm-10">Campus Nord, edifici C3, despatx 102.<br> C. Jordi Girona, 1. 08034 Barcelona, Catalunya.</dd> -->
 						<dt class="col-sm-2">e-mail</dt>
-						<dd class="col-sm-10">xavier.rivas(at)unir.net<br>xavier.rivas(at)upc.edu</dd>
+						<dd class="col-sm-10">xavier.rivas(at)urv.cat</dd>
 						<dt class="col-sm-2">web page</dt>
 						<dd class="col-sm-10">
 							<a href="http://xrivas.com">xrivas.com</a>
