--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 				<ul class="ms-4">
 					<li><a href="https://sites.google.com/view/leonardojcolombo/home" target="_blank">Leonardo Colombo</a></li>
 					<li><a href="https://www.icmat.es/mdeleon" target="_blank">Manuel de León</a></li>
-					<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a></li>
-					<li><a href="https://www.unir.net/profesores/jordi-gaset-rifa/" target="_blank">Jordi Gaset</a></li>
+					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a></li>
+					<li><a href="https://www.cunef.edu/en/gaset-rifa-jordi/" target="_blank">Jordi Gaset</a></li>
 					<li><a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia</a></li>
 					<li><a href="http://mlainz.gitlab.io/" target="_blank">Manuel Lainz</a></li>
 					<li>Julia Lange</li>
