--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 
 				<p>My PhD advisors were <a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a> and <a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia Sabaté</a>. You can find my thesis <a href = "docs/PhD.pdf" target="_blank">here</a>.</p>
 
+				<p>I co-organize a weekly online seminar in collaboration with Professor <a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a>, aimed at discussing basic and advanced research topics on Differential Geometry and Applications to Physics. For more details, visit <a href="https://www.fuw.edu.pl/KMMF/gamma/">Geometry and Applications: Modern Mathematical Approaches (Gamma)</a>.</p>
+
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
